# vcpkg_demo

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  main.cpp  portfile.cmake  usage  vcpkg-configuration.json  vcpkg.json  vcpkgsample.cpp  vcpkgsample.h
ports/vcpkg-lib/: portfile.cmake  usage  vcpkg.json
